# CloudTicTacToe-Frontend

./: .gitignore  .pylintrc  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  run.sh
src/: app.py
static/css/: style.css
static/js/: game-handler.js  main.js  utils.js
templates/: index.html  login.html  navbar.html  signup.html  verify-user.html
